--- a/Log4SlackTesting/App.config
+++ b/Log4SlackTesting/App.config
@@ -34,6 +34,7 @@
       <IconEmoji value=":ghost:" />
       <AddAttachment value="true" />
       <AddExceptionTraceField value="true" />
+      <AddInnerException value="true" />
       <UsernameAppendLoggerName value="true"/>
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="[TEST] %-5level %logger - %message" />
